# Halide

./: build_Halide_Only.ps1  build_hlsl6_jvp_sioutas_trace.ps1  build_hlsl_tests.ps1  install_halide_only.ps1  run_hlsl_tests.ps1  vcpkg.json
HalideTraceViz_Win/: build_Example.ps1  build_Halide.ps1  build_HalideTraceViz.ps1  build_Lessons.ps1  download_image.ps1  generate_video.ps1  viz_Example.ps1  viz_UnsharpMask.ps1
HalideTraceViz_Win/example/: CMakeLists.txt  tiled_blur.cpp  unsharp_mask.cpp
ImageDiff/: CMakeLists.txt  build.ps1  deblur_cg.cpp  estimate_blur_radius.cpp  estimate_normals_albedo.cpp  estimate_psf.cpp  estimate_tone_curve.cpp  optimize_texture.cpp  run_demo.ps1
Sioutas2020_Demo/: CMakeLists.txt  build_all.ps1  combined_report.txt  conv2d_relu_test_report.txt  demo_common.h  demo_conv2d_relu.cpp  demo_gaussian_blur.cpp  demo_harris_corner.cpp  demo_histogram_eq.cpp  demo_local_laplacian.cpp  demo_matmul.cpp  demo_nl_means.cpp  demo_unsharp_mask.cpp  gaussian_blur_report.txt  ref_local_laplacian_generator.cpp  ref_local_laplacian_process.cpp  ref_nl_means_generator.cpp  ref_nl_means_process.cpp  run_all_demos.ps1  unsharp_mask_test_report.txt
cmake/: FindFFmpeg.cmake  FindHalide_LLVM.cmake
packaging/: CMakeLists.txt
src/: CMakeLists.txt  Derivative.h  ForwardDiff.cpp  FunctionalCombinators.cpp  FunctionalCombinators.h  LLVM_Runtime_Linker.cpp
src/autoschedulers/: CMakeLists.txt
src/autoschedulers/sioutas2020/: AutoSchedule.cpp  CMakeLists.txt
src/runtime/: CMakeLists.txt  windows_fopen.cpp
test/autoschedulers/: CMakeLists.txt
test/autoschedulers/sioutas2020/: CMakeLists.txt  bench_generator.cpp  schedule_compare.cpp  test.cpp
test/correctness/: CMakeLists.txt  forward_diff.cpp  functional_combinators.cpp
util/: CMakeLists.txt  HalideTraceViz.cpp
